--- a/JotaBe.TypeExtensions.Tests/JotaBe.TypeExtensions.Tests.csproj
+++ b/JotaBe.TypeExtensions.Tests/JotaBe.TypeExtensions.Tests.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
 
@@ -15,15 +15,14 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.7.1" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
     <PackageReference Include="MSTest.TestAdapter" Version="2.2.10" />
     <PackageReference Include="MSTest.TestFramework" Version="2.2.10" />
     <PackageReference Include="coverlet.collector" Version="3.2.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\JotaBe.TypeExtensions\JotaBe.TypeExtensions.csproj" />
-    <ProjectReference Include="..\..\Src\JotaBe.Enumerations\JotaBe.Enumerations.csproj" />
+    <ProjectReference Include="..\JotaBe.TypeExtensions\JotaBe.TypeExtensions.csproj" />
   </ItemGroup>
 
 </Project>
